Colaboratory kullanılarak oluşturuldu

--- a/Pytorch_Mobile_phone_price_classification.ipynb
+++ b/Pytorch_Mobile_phone_price_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pytorch_Mobile_phone_price_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP42+eGVUIJszkOWNegQoNW",
+      "authorship_tag": "ABX9TyPA9F+FzDa5NrkGI4BLKz/S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -980,6 +980,83 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4KcgYK02nVfn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_item_2 = []\n",
+        "for i in range(2000):\n",
+        "  y_item_2.append(y_pred[i].argmax())"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kwQaGRkGnj9n",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_item_2 = np.array(y_item_2)"
+      ],
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HSAez8FFoR9d",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Checking accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3-5TQMjmntPs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6590ecbf-5d37-4dc8-8f21-60dc028db625"
+      },
+      "source": [
+        "correct = 0\n",
+        "for i in range(2000):\n",
+        "  if y_item_2[i]==y_train[i]:\n",
+        "    correct = correct + 1\n",
+        "print('Accuracy: {}'.format(correct*100/2000))"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 93.7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z7_7VGF0oUW3",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Checking loss"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4nFV1FDMn5Cs",
         "colab_type": "code",
         "colab": {
@@ -1254,19 +1331,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "R73g_xgcjfmt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
